# mania

./: Cargo.toml
src/: main.rs
