[package]
name = "mania"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
directories = "6.0.0"
serde = {version = "1.0.228", features = ["derive"]}
toml = "1.1.2"
